fix: `Steps` optimize style & support custom alignment

--- a/packages/arcodesign/tokens/app/arcodesign/default/index.less
+++ b/packages/arcodesign/tokens/app/arcodesign/default/index.less
@@ -516,8 +516,12 @@
 @notify-font-size: ~`pxtorem(14)`;
 @notify-min-height: ~`pxtorem(36)`;
 @steps-padding: ~`pxtorem(16)` 0;
-@steps-tail-horizontal-padding: 0 ~`pxtorem(18)`;
-@steps-tail-vertical-padding: ~`pxtorem(14)` 0;
+@steps-tail-border-radius: 2PX;
+@steps-tail-horizontal-gutter: ~`pxtorem(18)`;
+@steps-tail-vertical-gutter: ~`pxtorem(14)`;
+@steps-tail-horizontal-padding: 0 @steps-tail-horizontal-gutter;
+@steps-tail-vertical-padding: @steps-tail-vertical-gutter 0;
+@steps-tail-horizontal-left: ~`pxtorem(9)`;
 @steps-tail-vertical-top: ~`pxtorem(9)`;
 @steps-tail-standard-size: 1PX;
 @steps-tail-standard-background: @line-color;
